Issue #186 fix swipe card overflow scroll

--- a/src/app/pages/player/assessment/assessment.page.scss
+++ b/src/app/pages/player/assessment/assessment.page.scss
@@ -55,6 +55,7 @@ ion-footer{
     .front {
       transform: rotate3d(0, 0, 0, 0);
       z-index: 1;
+      overflow-x:hidden;
       &.no-overflow {
         overflow: hidden;
       }
